Added mathjax for LaTeX, improved nav

--- a/package.json
+++ b/package.json
@@ -3,10 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "better-react-mathjax": "^2.0.3",
     "cra-template": "1.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-scripts": "5.0.1"
+    "react-markdown": "^9.0.1",
+    "react-mathjax": "^1.0.1",
+    "react-scripts": "5.0.1",
+    "rehype-katex": "^7.0.1",
+    "remark-math": "^6.0.0"
   },
   "homepage": "https://luke-pickett.github.io/pi-website-react",
   "scripts": {
