--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-dom": "^19.0.0",
     "react-markdown": "^9.0.1",
     "react-mathjax": "^1.0.1",
+    "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
     "rehype-katex": "^7.0.1",
     "remark-math": "^6.0.0"
